syntax = "proto3";

option java_multiple_files = true;
option java_package = "at.htl.grpc";
option java_outer_classname = "HelloWorldProto";
option objc_class_prefix = "HLW";

service HelloWorldService {
  rpc SayHello(HelloRequest) returns (HelloReply) {}
  rpc StreamHello(stream HelloRequest) returns (stream HelloReply) {}
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}
